--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="application-name" content="xopp-merger-app">
+    <meta name="author" content="Salman Hasan">
+    <meta name="description" content="A web app to merge multiple xopp files.">
+    <meta name="keywords" content="Xournal++, xopp, web-app, xopp-merger-app">
+
+    <title>Xournal++ File Merger</title>
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,300,1,0"/>
+    
+    <!----- CSS ----->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <h1>Hello Express</h1>
+    <header>
+        <h1 style="font-weight: normal;">Xournal++ File Merger</h1>
+    </header>
+    <main>
+        <p class="description">
+            <a href="https://xournalpp.github.io/">Xournal++</a> is an open-source and cross-platform note-taking software that is fast, flexible, and functional.
+            <br>It includes many features and it can be extended via plugins. Xournal++ saves it's notebooks as an xopp file.
+            <br>Currently (2022-09-01) there is no way in the app itself two merge two or more xopp files.
+            <br>This web app was made to make merging xopp files possible and simple.
+        </p>
+        <div id="file-container" data-files="0" data-hover="false">
+            <span id="file_copy" class="material-symbols-outlined">file_copy</span>
+        </div>
+    </main>
 </body>
 </html>
