--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,22 @@
             <br>Currently (2022-09-01) there is no way in the app itself two merge two or more xopp files.
             <br>This web app was made to make merging xopp files possible and simple.
         </p>
-        <div id="file-container" data-files="0" data-hover="false">
+        <div id="file-container" data-files="1" data-hover="false">
+            <div class="file">
+                <span class="reorder">menu</span>
+                <span class="name">File 1</span>
+                <span class="remove">close</span>
+            </div>
+            <div class="file">
+                <span class="reorder">menu</span>
+                <span class="name">File 2</span>
+                <span class="remove">close</span>
+            </div>
+            <div class="file">
+                <span class="reorder">menu</span>
+                <span class="name">File 3</span>
+                <span class="remove">close</span>
+            </div>
             <span id="file_copy" class="material-symbols-outlined">file_copy</span>
         </div>
     </main>
