Added Even More Styling to File List

--- a/public/index.html
+++ b/public/index.html
@@ -35,20 +35,20 @@
             <br>This web app was made to make merging xopp files possible and simple.
         </p>
         <div id="file-container" data-files="1" data-hover="false">
-            <div class="file">
-                <span class="reorder">menu</span>
+            <div class="file" data-hold="true">
+                <span class="reorder no-select">menu</span>
                 <span class="name">File 1</span>
-                <span class="remove">close</span>
+                <span class="remove no-select">close</span>
             </div>
-            <div class="file">
-                <span class="reorder">menu</span>
+            <div class="file" data-hold="false">
+                <span class="reorder no-select">menu</span>
                 <span class="name">File 2</span>
-                <span class="remove">close</span>
+                <span class="remove no-select">close</span>
             </div>
-            <div class="file">
-                <span class="reorder">menu</span>
+            <div class="file" data-hold="false">
+                <span class="reorder no-select">menu</span>
                 <span class="name">File 3</span>
-                <span class="remove">close</span>
+                <span class="remove no-select">close</span>
             </div>
             <span id="file_copy" class="material-symbols-outlined">file_copy</span>
         </div>
