Added Dragging File List to reorder

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Metadata -->
+    <!-- Metadata --->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
 
     <title>Xournal++ File Merger</title>
 
-    <!-- FONTS -->
+    <!---- FONTS ---->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -22,6 +22,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link rel="stylesheet" href="./main.css">
+
+    <!----- JS ------>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="./main.js"></script>
 </head>
 <body>
     <header>
@@ -35,7 +39,7 @@
             <br>This web app was made to make merging xopp files possible and simple.
         </p>
         <div id="file-container" data-files="1" data-hover="false">
-            <div class="file" data-hold="true">
+            <div class="file" data-hold="false">
                 <span class="reorder no-select">menu</span>
                 <span class="name">File 1</span>
                 <span class="remove no-select">close</span>
