Added a plus icon

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
         </p>
         <div id="file-container" data-files="0" data-hover="false">
             <span id="file_copy" class="material-symbols-outlined">file_copy</span>
+            <div id="file_add" class="material-symbols-outlined no-select">add</div>
             <input id="file_upload" type="file" style="display: none;" multiple accept=".xopp,*">
         </div>
     </main>
