--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./main.css">
 
     <!----- JS ------>
+    <script src="./dom.js"></script>
     <script src="./main.js"></script>
 </head>
 <body>
