--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
                     <input id="file_upload" type="file" style="display: none;" multiple accept=".xopp,*">
                 </div>
             </div>
-            <button id="merge-button" type="button">merge</button>
+            <button id="merge-button" type="submit">merge</button>
         </form>
     </main>
 </body>
