Added a popup modal

--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,26 @@
                     <input id="file_upload" type="file" style="display: none;" multiple accept=".xopp,*">
                 </div>
             </div>
-            <button id="merge-button" type="submit">merge</button>
+            <button id="merge-button" class="primary-btn" type="submit">merge</button>
         </form>
     </main>
+    <div class="xpp_modal-container">
+        <div class="background"></div>
+        <div class="xpp_modal">
+            <div class="header">
+                <span class="title">Title</span>
+                <span id="modal_close" class="no-select">close</span>
+                <hr>
+            </div>
+            <div class="content">
+                <p>Test</p>
+            </div>
+            <div class="footer">
+                <hr>
+                <button type="button" class="OK primary-btn">OK</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
