Added download modal

--- a/public/index.html
+++ b/public/index.html
@@ -59,18 +59,21 @@
     </main>
     <div class="xpp_modal-container">
         <div class="background"></div>
-        <div class="xpp_modal">
+        <div class="xpp_modal" data-type="download">
             <div class="header">
                 <span class="title">Title</span>
                 <span id="modal_close" class="no-select">close</span>
                 <hr>
             </div>
             <div class="content">
-                <p>Test</p>
+                <div class="file">
+                    <span class="name">file.xopp</span>
+                    <span class="size">15.6KB</span>
+                </div>
             </div>
             <div class="footer">
                 <hr>
-                <button type="button" class="OK primary-btn">OK</button>
+                <button id="OK" type="button" class="primary-btn">Dowload</button>
             </div>
         </div>
     </div>
