--- a/public/index.html
+++ b/public/index.html
@@ -59,21 +59,24 @@
     </main>
     <div class="xpp_modal-container">
         <div class="background"></div>
-        <div class="xpp_modal" data-type="download">
+        <div class="xpp_modal" data-type="error">
             <div class="header">
                 <span class="title">Title</span>
                 <span id="modal_close" class="no-select">close</span>
                 <hr>
             </div>
             <div class="content">
-                <div class="file">
-                    <span class="name">file.xopp</span>
-                    <span class="size">15.6KB</span>
+                <div class="error">
+                    <p>An error occured:</p>
+                    <code>Error: Assertion Failed!
+                        assert@http://127.0.0.1:8080/main.js:38:11
+                        sortList@http://127.0.0.1:8080/main.js:294:11
+                        @debugger eval code:1:5</code>
                 </div>
             </div>
             <div class="footer">
                 <hr>
-                <button id="OK" type="button" class="primary-btn">Dowload</button>
+                <button id="OK" type="button" class="primary-btn">OK</button>
             </div>
         </div>
     </div>
