Added a favicon icon

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="Xournal++, xopp, web-app, xopp-merger-app">
 
     <title>Xournal++ File Merger</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" data-copyright="Luya Tshimbalanga <luya@fedoraproject.org>">
 
     <!---- FONTS ---->
     <link rel="preconnect" href="https://fonts.googleapis.com">
